<resources>
    <string name="app_name">DepoTest</string>
    <string name="label_copyright_splash">Copyright MMSoftwareTR v0.1.15</string>
    <string name="label_login">Giriş Yap</string>
    <string name="label_lupa_kata_sandi">Şifremi Unuttum</string>
    <string name="label_login_header_content">Kullanıcı Bilgileriniz ile Giriş Yapınız</string>
    <string name="label_email_hint">E-mail</string>
    <string name="label_password_hint">Şifre</string>
    <string name="label_tv_lupa_kata_sandi">Şifreni mi unuttun ?</string>
    <string name="label_assets_home">Assets</string>
    <string name="user_name_surname">Malik Melih HORAN</string>
    <string name="user_email">info@malikmelih.com</string>
    <string name="label_menu_title_menu_asset_masuk">Stok Girişi</string>
    <string name="label_menu_title_menu_stock_masuk">Stok / Ürün Girişi</string>
    <string name="label_menu_desc_1_menu_asset_masuk">Yeni Ürün</string>
    <string name="label_menu_desc_2_menu_asset_masuk">Stok / Ürün Ekleme</string>
    <string name="label_menu_title_menu_asset_keluar">Stok Çıkışı</string>
    <string name="label_menu_title_menu_stock_keluar">Stok / Ürün Çıkışı</string>
    <string name="label_menu_desc_1_menu_asset_keluar">Adetli / Tekli Olarak</string>
    <string name="label_menu_desc_2_menu_asset_keluar">Stok / Ürün Çıkışı Yap</string>
    <string name="label_menu_title_menu_stock_opname">Stok Sayımı</string>
    <string name="label_menu_desc_1_menu_stock_opname">Stok / Ürün</string>
    <string name="label_menu_desc_2_menu_stock_opname">Sayım İşlemi</string>
    <string name="label_menu_title_menu_barang_assets">Depolar</string>
    <string name="label_menu_title_menu_barang_stock">Stoktakiler</string>
    <string name="label_menu_desc_1_menu_barang_assets">Depo Lokasyonları</string>
    <string name="label_menu_desc_2_menu_barang_assets">Depodaki Ürünler</string>
    <string name="label_profil_title_page">Profil</string>
    <string name="label_title_page_list_gudang">Warehouse</string>
    <string name="label_title_page_list_barang">Items</string>
    <string name="label_title_page_list_barang_stock">List Items</string>
    <string name="label_phone_number_profile">Telefon Numarası</string>
    <string name="label_address_profile">Addres</string>
    <string name="label_pengaturan_profile_detail">Profil Ayarları</string>
    <string name="label_ganti_password_profile">Şifre Değiştir</string>
    <string name="label_tv_logout">Çıkış Yap</string>
    <string name="label_version_lippo_gudang_profile">MalikMelih v0.0.1</string>
    <string name="label_header_list_gudang">Please select warehouse first!</string>
    <string name="label_hint_search_list_barang">Input Product Name</string>
    <string name="label_menu_title_menu_item_barang_assets">Item Assets</string>
    <string name="label_menu_title_menu_item_barang_stock">Item Stock</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_pno">Envanter No</string>
    <string name="label_last_update">Last Update</string>
    <string name="label_waktu_scan">Waktu Scan</string>
    <string name="label_detail_barang">Detail Item</string>
    <string name="label_detail_barang_stock">Detail Item Stock</string>
    <string name="label_detail_per_gudang">Detail per-warehouse</string>
    <string name="label_detail_per_scan">Detail per-scan</string>
    <string name="label_title_page_riwayat_list_stock_opname">Stock Opname History</string>
    <string name="label_hint_input_nama">Input Name</string>
    <string name="label_add_stock_opname">Add stock opname</string>
    <string name="label_tanggal_waktu">Date/Time</string>
    <string name="label_status_draft">DRAFT</string>
    <string name="label_status_publish">PUBLISH</string>
    <string name="label_title_list_scanned_product">List Scanned Product</string>
    <string name="label_scan_product">Scan Item</string>
    <string name="label_detail_scanned_product">Detail Scanned Product</string>
    <string name="label_gudang">Envanter Adet</string>
    <string name="label_code">Code</string>
    <string name="label_loading_title_dialog">Lütfen Bekleyiniz..</string>
    <string name="label_scan_stock_opname">Scan Stock Opname</string>
    <string name="label_scan_assets_keluar">Scan Assets Out</string>
    <string name="label_scan_assets_masuk">Scan Assets In</string>
    <string name="label_scan_stock_masuk">Stok Girişi</string>
    <string name="label_scan_stock_keluar">Stok Çıkışı</string>
    <string name="label_header_scan_1">Lütfen Ürünün</string>
    <string name="label_header_scan_2">Etiketini Okutunuz</string>
    <string name="label_bottom_scan_1">Tarama Yapılabilmesi İçin Etiketin</string>
    <string name="label_bottom_scan_2">Alanın İçerisinde Olduğundan Emin Olun</string>
    <string name="label_bottom_scan_3">Barkod</string>
    <string name="label_permission_diperlukan">Yetki Verilmedi</string>
    <string name="label_rational_message">Tarama İçin Yetki Gerekli</string>
    <string name="label_rational_message_camera_photo">Kamera Yetkisi Gerekli</string>
    <string name="label_denied_message">If you reject permission,you can not use this service. Please turn on permissions at [Setting] > [Permission]</string>
    <string name="label_tambah_stock_opname">Add Stock Opname</string>
    <string name="label_input_nama_stock_opname">Input name of stock opname</string>
    <string name="label_input_quantity">Input Quantity</string>
    <string name="label_input_pno">Envanter Numarası</string>
    <string name="label_input_quantity_barang_stock">Input Quantity Item Stock</string>
    <string name="label_tambah">Add</string>
    <string name="label_update">Update</string>
    <string name="label_form_wajib_diisi">Form is required</string>
    <string name="label_update_quantity">Update Quantity</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_header_content_dialog_delete_stockopname1">Are you sure</string>
    <string name="label_header_content_dialog_delete_stockopname2">to delete Item?</string>
    <string name="label_header_content_dialog_logout1">Are you sure</string>
    <string name="label_header_content_dialog_logout2">Logout?</string>
    <string name="label_header_content_dialog_change_password1">Success update</string>
    <string name="label_header_content_dialog_change_password2">password</string>
    <string name="label_header_content_dialog_update_photo1">Success update</string>
    <string name="label_header_content_dialog_update_photo2">your photo</string>
    <string name="label_ya">Yes</string>
    <string name="label_tidak">No</string>
    <string name="label_title_data_publish_berhasil">Success Submit Data</string>
    <string name="label_title_forgot_berhasil">Email Sent</string>
    <string name="label_content_dialog_forgot_berhasil">Please cek email for get the new password</string>
    <string name="label_oke">Ok</string>
    <string name="label_input_kode_barang">Input Item Code</string>
    <string name="label_check">Check</string>
    <string name="label_data_terkirim">Data Sent</string>
    <string name="label_list_produk">Product List</string>
    <string name="label_lanjutkan_scan">Next Scan</string>
    <string name="label_list_assets">Assets</string>
    <string name="label_list_barang">Ürünler</string>
    <string name="label_input_nama_barang">Ürün Arama</string>
    <string name="label_list_assets_keluar">Stok Çıkışı</string>
    <string name="label_list_stock_masuk">Stok Girişi</string>
    <string name="label_list_stock_keluar">Stok Çıkışı</string>
    <string name="label_list_assets_masuk">Stok Girişi</string>
    <string name="label_detail_assets">Detail Assets</string>
    <string name="label_detail_assets_keluar">Detail Assets Out</string>
    <string name="label_detail_stock_barang_masuk">Detail Barang In</string>
    <string name="label_detail_stock_barang_keluar">Detail Barang Out</string>
    <string name="label_detail_assets_masuk">Detail Barang In</string>
    <string name="label_informasi_detail_barang">Information of item</string>
    <string name="label_keterangan">Açıklama</string>
    <string name="label_tanggal">Date</string>
    <string name="label_waktu">Time</string>
    <string name="label_hint_input_keterangan">Açıklamayı buraya giriniz.</string>
    <string name="label_submit">Kaydet</string>
    <string name="label_title_form_assets_keluar">Stok Çıkış Formu</string>
    <string name="label_title_form_assets_masuk">Stok Giriş Formu</string>
    <string name="label_title_form_stock_masuk">Form Stock In</string>
    <string name="label_title_form_stock_keluar">Form Stock Out</string>
    <string name="label_silakan_lengkapi_form">Please complete form below!</string>
    <string name="label_assets">Assets</string>
    <string name="label_stock">Stock</string>
    <string name="label_tipe_quantity">Quantity Type</string>
    <string name="label_input_stock_quantity">Input Stock Quantity</string>
    <string name="label_something_wrong">Problem with server</string>
    <string name="label_koneksi_error">Network error, Please check connection</string>
    <string name="label_header_forgot_pass_sub1">Şifre sıfırlama isteği gönderebilmemiz için</string>
    <string name="label_header_forgot_pass_sub2">Eposta adresinizi ve Kullanıcı adınızı giriniz</string>
    <string name="label_kirim_email">Sıfırlama Epostası Gönder</string>
    <string name="label_back_page_login">Giriş Sayfasına Dön</string>
    <string name="label_kode">Barkod</string>
    <string name="label_kembali">CLOSE</string>
    <string name="label_kembali_dialog">BACK</string>
    <string name="label_kembali_dialog_failure">Back</string>
    <string name="label_ulangi_dialog_failure">Repeat</string>
    <string name="label_ulangi">Repeat</string>
    <string name="label_notif">Warning</string>
    <string name="label_failure_content1">Network error</string>
    <string name="label_failure_content2">Please check connection</string>
    <string name="label_failure_content_server_title">Sorry</string>
    <string name="label_failure_content_server_content">Problem with server</string>
    <string name="label_hint_password_saat_ini">Current Password</string>
    <string name="label_hint_password_baru">New Password</string>
    <string name="label_hint_retype_password">Re-type Password</string>
    <string name="label_simpan">Save</string>
    <string name="label_retype_wrong">New Password with Re-type Password not match</string>
    <string name="label_lama_masih_sama">Old password wrong</string>
    <string name="label_password_tidak_boleh_sama">New password still same with old password</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_camera">Camera</string>
    <string name="label_header_pilih_opsi_photo">Select photo using options</string>
    <string name="label_update_profile">Update Profile</string>
    <string name="label_please_wait_spinner_gudang">please wait getting data</string>
    <string name="labe_hint_pilih_gudang">Select Warehouse</string>
    <string name="label_pilih_gudang_terlebih_dahulu">Select warehouse first</string>
    <string name="label_semua_status">All Status</string>
    <string name="label_draft_status">Draft Status</string>
    <string name="label_pending_status">Pending Status</string>
    <string name="label_publish_status">Publish Status</string>
    <string name="label_scanned">Scanned</string>
    <string name="label_selected_wirehouse_first">Select warehouse first</string>
    <string name="label_selected_quantity_type_first">Select quantity type first</string>
    <string name="label_pcs">PCS</string>
    <string name="label_stockopname_asset_added_scan_1">Success add products code </string>
    <string name="label_stockopname_asset_added_scan_2">to system</string>
    <string name="label_isikan_tipe_quantity_dahulu">Fill in the Quantity Type first</string>
    <string name="label_empty_data_title">Data is Empty</string>
</resources>