<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_login"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layoutAnimation="@anim/layout_animation_float"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingPrefix">

                <TextView
                    android:id="@+id/tvHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin35"
                    android:layout_marginTop="140dp"
                    android:layout_marginRight="@dimen/margin35"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:text="@string/label_lupa_kata_sandi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_huge2"/>

                <LinearLayout
                    android:layout_marginBottom="@dimen/margin15"
                    android:layout_marginLeft="@dimen/margin35"
                    android:layout_marginRight="@dimen/margin35"
                    android:layout_marginTop="@dimen/margin20"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSubHeader1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/label_header_forgot_pass_sub1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_semi_medium"/>

                    <TextView
                        android:layout_marginTop="@dimen/margin3"
                        android:id="@+id/tvSubHeader2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/label_header_forgot_pass_sub2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_semi_medium"/>

                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginLeft="@dimen/margin35"
                    android:layout_marginRight="@dimen/margin35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin25"
                    android:background="@drawable/bg_rounded_login_edit_text"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:autofillHints="emailAddress"
                        android:background="@color/transparent"
                        android:hint="@string/label_email_hint"
                        android:textSize="@dimen/text_default"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        tools:ignore="MissingPrefix,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginLeft="@dimen/margin35"
                    android:layout_marginRight="@dimen/margin35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin25"
                    android:textColorHint="@color/white"
                    android:background="@drawable/bg_rounded_login_edit_text">

                    <EditText
                        android:id="@+id/etNick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:autofillHints="emailAddress"
                        android:background="@color/transparent"
                        android:hint="Kullanıcı Adı"
                        android:textSize="@dimen/text_default"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        tools:ignore="MissingPrefix,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin55"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin10"
                    android:layout_marginTop="@dimen/margin95"
                    android:background="@drawable/bg_rounded_btn_login"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:textAllCaps="false"
                    android:paddingLeft="@dimen/margin30"
                    android:paddingRight="@dimen/margin30"
                    android:text="@string/label_kirim_email"
                    android:textColor="@color/color_tv_blue_btn_login"
                    android:textSize="@dimen/text_default"
                    tools:ignore="MissingPrefix">

                </Button>


            <TextView
                android:id="@+id/tvBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin35"
                android:layout_marginTop="@dimen/margin15"
                android:layout_marginRight="@dimen/margin35"
                android:layout_marginBottom="@dimen/margin15"
                android:clickable="true"
                android:gravity="center"
                android:onClick="bHome"
                android:text="@string/label_back_page_login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_default"
                tools:ignore="MissingPrefix,TouchTargetSizeCheck" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>