<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lParentContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_login"
    android:orientation="vertical"
    tools:context="com.example.depostok.ui.activity.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layoutAnimation="@anim/layout_animation_list_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/loginlbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="120dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/loginDesc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input1"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/margin30"
                android:paddingBottom="@dimen/margin30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/bg_rounded_login_edit_text"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/white">

                        <EditText
                            android:id="@+id/userEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:autofillHints="emailAddress"
                            android:background="@color/transparent"
                            android:hint="@string/label_email_hint"
                            android:textSize="@dimen/text_default"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            tools:ignore="MissingPrefix,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/bg_rounded_login_edit_text"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:textSize="15sp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/white">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:autofillHints="password"
                            android:background="@color/transparent"
                            android:hint="@string/label_password_hint"
                            android:textSize="@dimen/text_default"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            tools:ignore="MissingPrefix,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input2"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/lgnBtn"
                    android:backgroundTint="@color/btn_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="95dp"
                    android:paddingRight="95dp"
                    android:text="@string/label_login"
                    android:textColor="@color/color_tv_blue_btn_login"
                    android:textSize="@dimen/text_default"
                    tools:ignore="MissingPrefix,DuplicateSpeakableTextCheck" />

                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="Beni Hatırla"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/forgetPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="fPass"
                    android:text="@string/label_tv_lupa_kata_sandi"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/color_tv_copyright_login"
                    android:textSize="12sp"
                    android:text="@string/label_copyright_splash"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>